--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,14 @@
 @import './scss/_vars.scss';
 @import './scss/menu.scss';
+@import './scss/game.scss';
 
 @font-face {
     font-family: Outfit;
     src: url('./assets/Outfit-VariableFont_wght.ttf');
+}
+
+* {
+    box-sizing: border-box;
 }
 
 .heading-large {
@@ -51,5 +56,7 @@ body,
 }
 
 #app {
+    max-width: 480px;
     padding: 0 10px;
+    width: 100%;
 }
