--- a/scss/game.scss
+++ b/scss/game.scss
@@ -1,123 +1,7 @@
+@import './game-header.scss';
+@import './game-board.scss';
+@import './game-stats.scss';
+
 #game {
     width: 100%;
-
-    .header {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        gap: 20px;
-
-        >div {
-            width: 100%;
-        }
-
-        .logo {
-            display: block;
-        }
-
-        .turn-indicator {
-            background-color: $semi-dark-navy;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 10px;
-            -webkit-box-shadow: inset 0px -4px 0px 0px #10212A;
-            box-shadow: inset 0px -4px 0px 0px #10212A;
-            max-width: 140px;
-            height: 52px;
-
-            svg {
-                max-width: 20px;
-                fill: $silver;
-                margin-right: 13px;
-            }
-
-            span {
-                color: $silver;
-                text-transform: uppercase;
-            }
-        }
-
-        div:nth-child(3) {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        button {
-            border: none;
-            padding: 16px;
-            background-color: $silver;
-            -webkit-box-shadow: inset 0px -4px 0px 0px rgba(#000000, 0.25);
-            box-shadow: inset 0px -4px 0px 0px rgba(#000000, 0.25);
-            border-radius: 10px;
-            cursor: pointer;
-            transition: all 300ms ease-in-out;
-
-            &:hover {
-                background-color: $silver-hover;
-            }
-
-            img {
-                display: block;
-            }
-        }
-    }
-
-    #game-board {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-        margin: 20px 0;
-
-        .game-cell {
-            width: 100%;
-            aspect-ratio: 1/1;
-            max-width: 140px;
-            max-height: 140px;
-            -webkit-box-shadow: inset 0px -8px 0px 0px #10212A;
-            box-shadow: inset 0px -8px 0px 0px #10212A;
-            background-color: $semi-dark-navy;
-            border-radius: 15px;
-            cursor: pointer;
-            padding: 38px;
-
-            svg {
-                display: block;
-            }
-
-            &.x svg {
-                fill: $light-blue;
-            }
-
-            &.o svg {
-                fill: $light-yellow;
-            }
-        }
-    }
-
-    .game-stats {
-        display: flex;
-        gap: 20px;
-
-        div {
-            flex: 1;
-            text-align: center;
-            padding: 10px;
-            color: $dark-navy;
-            background-color: $silver;
-            border-radius: 15px;
-
-            &:first-child {
-                background-color: $light-blue;
-            }
-
-            &:last-child {
-                background-color: $light-yellow;
-            }
-
-            span {
-                display: block;
-            }
-        }
-    }
 }
