--- a/scss/game.scss
+++ b/scss/game.scss
@@ -1,6 +1,7 @@
 @import './game-header.scss';
 @import './game-board.scss';
 @import './game-stats.scss';
+@import './winner.scss';
 
 #game {
     width: 100%;
